tests/vertical-slice/accept/hashmap_values_string.hew
fn main() {
    let labels: HashMap<string, string> = HashMap::new();
    labels.insert("primary", "maple");

    for value in labels.values() {
        println(value);
    }
}
