tests/vertical-slice/reject/managed_record_or_enum_eq.hew
type HoldsMap {
    values: HashMap<string, i64>;
}

fn main() {
    let a = HoldsMap { values: HashMap::new() };
    let b = HoldsMap { values: HashMap::new() };
    let _ = a == b;
}
